@@ -1,120 +1,131 @@
 package com.cydeo.service.impl;
 
 import com.cydeo.dto.ClientVendorDto;
+import com.cydeo.dto.CompanyDto;
+import com.cydeo.entity.Address;
 import com.cydeo.entity.ClientVendor;
+import com.cydeo.entity.Company;
 import com.cydeo.enums.ClientVendorType;
-import com.cydeo.exception.ClientVendorNotFoundException;
 import com.cydeo.repository.ClientVendorRepository;
+import com.cydeo.service.AddressService;
 import com.cydeo.service.ClientVendorService;
 import com.cydeo.service.CompanyService;
+import com.cydeo.service.SecurityService;
+import com.cydeo.util.AddressMapper;
+import com.cydeo.util.ClientVendorMapper;
+import com.cydeo.util.CompanyMapper;
 import com.cydeo.util.MapperUtil;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class ClientVendorServiceImpl implements ClientVendorService {
 
-    private final MapperUtil mapperUtil;
-    private final ClientVendorRepository clientVendorRepository;
-    private final CompanyService companyService;
+    MapperUtil mapperUtil;
+    ClientVendorRepository clientVendorRepository;
+    ClientVendorMapper clientVendorMapper;
+    AddressMapper addressMapper;
+    CompanyMapper companyMapper;
+    AddressService addressService;
+    SecurityService securityService;
+    CompanyService companyService;
 
-    public ClientVendorServiceImpl(MapperUtil mapperUtil, ClientVendorRepository clientVendorRepository, CompanyService companyService) {
+    public ClientVendorServiceImpl(MapperUtil mapperUtil, ClientVendorRepository clientVendorRepository, ClientVendorMapper clientVendorMapper, AddressMapper addressMapper, CompanyMapper companyMapper, AddressService addressService, SecurityService securityService, CompanyService companyService) {
         this.mapperUtil = mapperUtil;
         this.clientVendorRepository = clientVendorRepository;
+        this.clientVendorMapper = clientVendorMapper;
+        this.addressMapper = addressMapper;
+        this.companyMapper = companyMapper;
+        this.addressService = addressService;
+        this.securityService = securityService;
         this.companyService = companyService;
     }
 
     @Override
-    @Transactional(readOnly = true)
     public ClientVendorDto findById(Long id) {
-        ClientVendor clientVendor = clientVendorRepository.findById(id).orElseThrow(ClientVendorNotFoundException::new);
-        return mapperUtil.convert(clientVendor, new ClientVendorDto());
+        return mapperUtil.convert(clientVendorRepository.findById(id).get(), new ClientVendorDto());
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public List<ClientVendorDto> listAllClientVendors() {
-        Long companyId = companyService.getCompanyDtoByLoggedInUser().getId();
-        List<ClientVendor> clientVendorList = clientVendorRepository.findClientVendorsByCompany_Id(companyId);
-        return clientVendorList.stream()
-//                .filter(clientVendor -> clientVendor.getCompany().getId().equals(companyService.getCompanyDtoByLoggedInUser().getId()))
-                .map(cv -> {
-                    ClientVendorDto dto = mapperUtil.convert(cv, new ClientVendorDto());
-                    dto.setHasInvoice(!cv.getInvoices().isEmpty());
-                    return dto;
-                })
-                .sorted(Comparator.comparing(ClientVendorDto::getClientVendorType).reversed()
-                        .thenComparing(ClientVendorDto::getClientVendorName))
-                .toList();
-    }
+    public List<ClientVendorDto> findAll() {
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<ClientVendorDto> listByClientVendorType(ClientVendorType clientVendorType) {
-        Long companyId = companyService.getCompanyDtoByLoggedInUser().getId();
-        return clientVendorRepository.findAll()
+        return clientVendorRepository.findAllByIsDeleted(false)
                 .stream()
-                .filter(clientOrVendor -> clientOrVendor.getClientVendorType().equals(clientVendorType))
-                .filter(companySelect -> companySelect.getCompany().getId().equals(companyId))
-                .map(vendor -> mapperUtil.convert(vendor, new ClientVendorDto()))
-                .toList();
+                .map(clientVendorMapper::convertToDto)
+                .collect(Collectors.toList());
+    }
+
+    public void update(Long id, ClientVendorDto clientVendorDto){
+        ClientVendor existingClientVendor = clientVendorRepository.findById(id)
+                .orElseThrow();
+
+        if (clientVendorDto.getClientVendorName() != null) {
+            existingClientVendor.setClientVendorName(clientVendorDto.getClientVendorName());
+        }
+        if (clientVendorDto.getAddress() != null) {
+            Address address = addressMapper.convertToEntity(clientVendorDto.getAddress());
+            addressService.save(address);
+            existingClientVendor.setAddress(address);
+        }
+        if (clientVendorDto.getPhone() != null) {
+            existingClientVendor.setPhone(clientVendorDto.getPhone());
+        }
+        if (clientVendorDto.getWebsite() != null) {
+            existingClientVendor.setWebsite(clientVendorDto.getWebsite());
+        }
+        if (clientVendorDto.getCompany() != null) {
+            Company company = companyMapper.convertToEntity(clientVendorDto.getCompany());
+            existingClientVendor.setCompany(company);
+        }
+        if (clientVendorDto.getClientVendorType() != null) {
+            existingClientVendor.setClientVendorType(clientVendorDto.getClientVendorType());
+        }
+        clientVendorRepository.save(existingClientVendor);
     }
 
     @Override
-    public ClientVendorDto save(ClientVendorDto clientVendorDto) {
-        clientVendorDto.setCompany(companyService.getCompanyDtoByLoggedInUser());
-        ClientVendor clientVendor = mapperUtil.convert(clientVendorDto, new ClientVendor());
-        ClientVendor saved = clientVendorRepository.save(clientVendor);
-        return mapperUtil.convert(saved, new ClientVendorDto());
+    public void delete(Long clientVendorId) {
+        Optional<ClientVendor> clientVendor = clientVendorRepository.findById(clientVendorId);
+        clientVendor.ifPresent(vendor -> vendor.setIsDeleted(true));
+        clientVendorRepository.save(clientVendor.get());
     }
 
     @Override
-    public ClientVendorDto update(ClientVendorDto clientVendorDto) {
-        ClientVendor saved = clientVendorRepository.findById(clientVendorDto.getId()).orElseThrow(ClientVendorNotFoundException::new);
-        clientVendorDto.getAddress().setId(saved.getAddress().getId());     // otherwise it creates new address instead of updating existing one
-        clientVendorDto.setCompany(companyService.getCompanyDtoByLoggedInUser());
-        ClientVendor updated = mapperUtil.convert(clientVendorDto, new ClientVendor());
-        return mapperUtil.convert(clientVendorRepository.save(updated), new ClientVendorDto());
+    public List<ClientVendorDto> listAllByClientVendorType(ClientVendorType clientVendorType) {
+        List<ClientVendor> list = clientVendorRepository.findAllByClientVendorTypeAndCompany_IdOrderByClientVendorName(clientVendorType, companyService.getCompanyIdByLoggedInUser());
+        return list.stream().map(each -> mapperUtil.convert(each,new ClientVendorDto())).toList();
     }
 
     @Override
-    public void deleteClientVendorById(Long id) {
-        ClientVendor clientVendor = clientVendorRepository.findById(id).orElseThrow(ClientVendorNotFoundException::new);
-        clientVendor.setIsDeleted(true);
-        clientVendor.getAddress().setIsDeleted(true);
-        clientVendor.setClientVendorName(clientVendor.getClientVendorName() + "-" + clientVendor.getId());
-        clientVendorRepository.save(clientVendor);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
     public boolean isClientVendorExist(ClientVendorDto clientVendorDto) {
-        Long companyId = companyService.getCompanyDtoByLoggedInUser().getId();
+        Long companyId = companyService.getCompanyIdByLoggedInUser();
         return clientVendorRepository.findByClientVendorName_AndCompany_Id(clientVendorDto.getClientVendorName(), companyId)
                 .map(clientVendor -> !Objects.equals(clientVendorDto.getId(), clientVendor.getId()))
                 .orElse(false);
+
     }
 
-    // same result :
-//    public boolean isClientVendorExist2(ClientVendorDto clientVendorDto) {
-//        Long companyId = companyService.getCompanyDtoByLoggedInUser().getId();
-//        ClientVendor clientVendor = clientVendorRepository.findByClientVendorName_AndCompany_Id(
-//                        clientVendorDto.getClientVendorName(), companyId)
-//                .orElse(null);
-//        if (clientVendor == null) return false; // Objects.equals() does same thing
-//
-//        return !Objects.equals(clientVendorDto.getId(), clientVendor.getId());
-//    }
+    @Override
+    public void save(ClientVendorDto clientVendorDto) {
+        clientVendorDto.setCompany(getCompanyByLoggedInUser());
+        ClientVendor clientVendor = clientVendorMapper.convertToEntity(clientVendorDto);
+        clientVendor.setId(clientVendorDto.getId());
+        clientVendorRepository.save(clientVendor);
+    }
+
+    public List<ClientVendorDto> getClientVendorListByLoggedInUser() {
+        Long companyId = securityService.getLoggedInUser().getCompany().getId();
+        return clientVendorRepository.findAllByCompany_Id_AndIsDeleted(companyId, false).stream().map(clientVendorMapper::convertToDto)
+                .collect(Collectors.toList());
+    }
+
+    public CompanyDto getCompanyByLoggedInUser(){
+        return securityService.getLoggedInUser().getCompany();
+    }
 
 
 }
-
-
-
-
-
-
